--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -43,7 +43,7 @@ layout: default
           <!-- devinlife comment : right-sidebar ads -->
           <nav class="toc-custom">
             {% if page.toc_ads %}
-              {% include GoogleAdSenseSidbar.html %}
+              {% include googleAdSenseSidbar.html %}
             {% endif %}
           </nav>
           </aside>
